--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,32 @@
 body{
     margin: 0;
     padding: 16px 32px;
-    background: #222222;
+    background: #222522;
     color: white;
     font-family: cursor, monospace;
     overflow-x: hidden;
+}
+
+#command {
+    cursor: text;
+    height: 64px;
+}
+
+textarea{
+    left: -1742px;
+    position: absolute;
+}
+
+.cursor {
+    position: relative;
+    opacity: 1;
+    width: 10px;
+    transform: translateY(3px);
+    overflow: hidden;
+    text-indent: -4px;
+    display: inline-block;
+    animation: blinker 1s linear infinite;
+}
+@keyframes blinker {
+    50% { opacity: 0; }
 }
